# rust-where39

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  wordlist.rs
